--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.14.1",
     "cloudinary": "^2.0.1",
     "dotenv": "^16.4.5",
+    "dotenv-vault": "^1.26.1",
     "express": "^4.18.2",
     "filestack-js": "^3.30.1",
     "firebase-admin": "^12.0.0",
